--- a/index.html
+++ b/index.html
@@ -1,49 +1,69 @@
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GitHub User Info</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>GitHub Account Age</title>
     <style>
-        body { padding: 20px; }
+        body { font-family: sans-serif; }
+        #github-status { margin-top: 10px; }
+        footer { margin-top: 20px; font-size: small; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>GitHub User Info</h1>
-        <div class="mb-3">
-            <label for="github-user-seed" class="form-label">GitHub Username:</label>
-            <input type="text" class="form-control" id="github-user-seed" placeholder="Enter username">
-        </div>
-        <button class="btn btn-primary" onclick="fetchGitHubData()">Get Info</button>
-        <div id="github-created-at" class="mt-3"></div>
-    </div>
-
-    <footer class="mt-4 text-center">
-        <p>&copy; 2024. MIT License.</p>
-    </footer>
+    <h1>GitHub Account Age</h1>
+    <label for="github-username">GitHub Username:</label>
+    <input type="text" id="github-username" value="">
+    <button id="lookup-button">Lookup</button>
+    <div id="github-status" aria-live="polite"></div>
+    <div id="github-account-age"></div>
 
     <script>
-        async function fetchGitHubData() {
-            const username = document.getElementById('github-user-seed').value;
-            const apiUrl = `https://api.github.com/users/${username}`;
+        const usernameInput = document.getElementById('github-username');
+        const lookupButton = document.getElementById('lookup-button');
+        const statusDiv = document.getElementById('github-status');
+        const ageDiv = document.getElementById('github-account-age');
 
+        const lastGithubUser = localStorage.getItem('lastGithubUser');
+        if (lastGithubUser) {
+            usernameInput.value = lastGithubUser;
+            lookupAccountAge(lastGithubUser);
+        }
+
+        lookupButton.addEventListener('click', () => {
+            const username = usernameInput.value;
+            if (username) {
+                lookupAccountAge(username);
+            }
+        });
+
+        async function lookupAccountAge(username) {
+            statusDiv.textContent = 'Loading...';
             try {
-                const response = await fetch(apiUrl);
-                const data = await response.json();
-
-                if (data.created_at) {
-                    const createdAt = new Date(data.created_at);
-                    document.getElementById('github-created-at').textContent = `Account created at: ${createdAt.toLocaleDateString()}`;
-                } else {
-                    document.getElementById('github-created-at').textContent = 'User not found or creation date unavailable.';
+                const response = await fetch(`https://api.github.com/users/${username}`);
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
                 }
+                const data = await response.json();
+                const createdAt = new Date(data.created_at);
+                const now = new Date();
+                const ageInYears = now.getFullYear() - createdAt.getFullYear();
+
+                ageDiv.textContent = `Account Age: ${ageInYears} years`;
+                statusDiv.textContent = 'Loaded.';
+                localStorage.setItem('lastGithubUser', username);
+
             } catch (error) {
-                document.getElementById('github-created-at').textContent = 'Error fetching data.';
+                statusDiv.textContent = `Error: ${error.message}`;
+                ageDiv.textContent = '';
             }
         }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+    <footer>
+        &copy; 2023. MIT License.
+    </footer>
 </body>
 </html>
+```
